crates/edgezero-macros/tests/ui/key_in_named_store_sibling_not_string.stderr
error: `#[secret]` may only annotate `String` or `Option<String>`
  --> tests/ui/key_in_named_store_sibling_not_string.rs:11:12
   |
11 |     vault: u32,
   |            ^^^
